// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initClient contains the correct methods 1`] = `
Array [
  "batch",
  "getLogs",
  "listIndexes",
  "search",
]
`;

exports[`initIndex contains the correct methods 1`] = `
Array [
  "batch",
  "browse",
  "browseFrom",
  "clearIndex",
  "copyIndex",
  "getObject",
  "moveIndex",
  "removeIndex",
  "search",
  "waitTask",
]
`;

exports[`initPlaces contains the correct methods 1`] = `
Array [
  "getObject",
  "search",
]
`;
